[gd_scene load_steps=2 format=3 uid="uid://r7534opr7e1s"]

[ext_resource type="Script" path="res://main.gd" id="1_s6rtm"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s6rtm")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="NewItemBtn" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "New Item"

[node name="ImportJsonBtn" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Import JSON"

[node name="SaveJsonBtn" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Save JSON"

[node name="SyncJsonBtn" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Sync JSON"

[node name="OpenFileDialog" type="FileDialog" parent="."]
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
access = 2
use_native_dialog = true

[node name="SyncFileDialog" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open a File"
size = Vector2i(207, 175)
ok_button_text = "Open"
file_mode = 0
access = 2
use_native_dialog = true

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2
offset_top = 44.0
offset_right = 1053.0
offset_bottom = 645.0

[node name="ItemList" type="ItemList" parent="HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
item_count = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer2"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2

[node name="SaveItemBtn" type="Button" parent="HBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Save"

[node name="ItemIdEdit" type="TextEdit" parent="HBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "Item ID"

[node name="ItemTypeMenuBtn" type="MenuButton" parent="HBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Item Type"
alignment = 0

[node name="ItemNameEdit" type="TextEdit" parent="HBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "Item Name"

[node name="ItemDescEdit" type="TextEdit" parent="HBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
placeholder_text = "Description"
wrap_mode = 1

[node name="Label" type="Label" parent="HBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "Tags"

[node name="TagsContainer" type="GridContainer" parent="HBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 5

[node name="Label2" type="Label" parent="HBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "Tags Dict"

[node name="TagsDictMenuBtn" type="MenuButton" parent="HBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Select Tag Here"
alignment = 0

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="TagsDictContainer" type="VBoxContainer" parent="HBoxContainer2/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(600, 0)
layout_mode = 2

[connection signal="pressed" from="HBoxContainer/NewItemBtn" to="." method="_on_new_item_btn_pressed"]
[connection signal="pressed" from="HBoxContainer/ImportJsonBtn" to="." method="_on_import_json_btn_pressed"]
[connection signal="pressed" from="HBoxContainer/SaveJsonBtn" to="." method="_on_save_json_btn_pressed"]
[connection signal="pressed" from="HBoxContainer/SyncJsonBtn" to="." method="_on_import_json_btn_pressed"]
[connection signal="file_selected" from="OpenFileDialog" to="." method="_on_open_file_dialog_file_selected"]
[connection signal="file_selected" from="SyncFileDialog" to="." method="_on_sync_file_dialog_file_selected"]
[connection signal="item_selected" from="HBoxContainer2/ItemList" to="." method="_on_item_list_item_selected"]
[connection signal="pressed" from="HBoxContainer2/VBoxContainer/SaveItemBtn" to="." method="_on_save_item_btn_pressed"]
